test/error/typedparam.lua
function f(a : string)
end
